Add projects and companies

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,height=device-height initial-scale=1.0">
  	<link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
   <title>Manfred Camacho Portfolio</title>
 </head>
 <body>
@@ -91,16 +91,115 @@
 						</div>
 						<hr/>
 						<div class="work-experience__title">
-							<h2>EMPRESAS EN LAS QUE TRABAJÉ</h2>
+							<h2>EMPRESAS EN LAS QUE TRABAJE</h2>
 						</div>
-					</div>
-					<div class="work-experience__companies">
-						
+						<div class="work-experience__companies">
+							<article class="work-experience__company">
+								<div class="work-experience__logo">
+									<img src="img/despegar.png" alt="Despegar">
+								</div>
+								<div class="work-experience__date">
+									<em>Agosto 2017 - Presente</em>
+								</div>
+							</article>
+							<article class="work-experience__company">
+								<div class="work-experience__logo">
+									<img src="img/turismocity.png" alt="Turismocity">
+								</div>
+								<div class="work-experience__date">
+									<em>Enero 2011 - Marzo 2011</em>
+								</div>
+							</article>
+						</div>
 					</div>
 			</section>
 			<section id="projects" class="projects full-page-container">
 				<div class="content-wrapper">
-					<h2>PROYECTOS</h2>
+					<div class="projects__title">
+						<h2>PROYECTOS</h2>
+					</div>
+					<div class="projects__content">
+						<article class="projects__project">
+							<div class="projects__thumbnail">
+								<img src="img/comming-soon.png" alt="Comming Soon">
+							</div>
+							<div class="projects__description">
+								<em>404 Not Found</em>
+							</div>
+						</article>
+						<article class="projects__project">
+							<div class="projects__thumbnail">
+								<img src="img/comming-soon.png" alt="Comming Soon">
+							</div>
+							<div class="projects__description">
+								<em>Social media dashboard</em>
+							</div>
+						</article>
+						<article class="projects__project">
+							<div class="projects__thumbnail">
+								<img src="img/comming-soon.png" alt="Comming Soon">
+							</div>
+							<div class="projects__description">
+								<em>Image Uploader</em>
+							</div>
+						</article>
+						<article class="projects__project">
+							<div class="projects__thumbnail">
+								<img src="img/comming-soon.png" alt="Comming Soon">
+							</div>
+							<div class="projects__description">
+								<em>Weather App</em>
+							</div>
+						</article>
+						<article class="projects__project">
+							<div class="projects__thumbnail">
+								<img src="img/comming-soon.png" alt="Comming Soon">
+							</div>
+							<div class="projects__description">
+								<em>Github Jobs</em>
+							</div>
+						</article>
+						<article class="projects__project">
+							<div class="projects__thumbnail">
+								<img src="img/comming-soon.png" alt="Comming Soon">
+							</div>
+							<div class="projects__description">
+								<em>IP Address Tracker</em>
+							</div>
+						</article>
+						<article class="projects__project">
+							<div class="projects__thumbnail">
+								<img src="img/comming-soon.png" alt="Comming Soon">
+							</div>
+							<div class="projects__description">
+								<em>Authentication App</em>
+							</div>
+						</article>
+						<article class="projects__project">
+							<div class="projects__thumbnail">
+								<img src="img/comming-soon.png" alt="Comming Soon">
+							</div>
+							<div class="projects__description">
+								<em>Pricing Component</em>
+							</div>
+						</article>
+						<article class="projects__project">
+							<div class="projects__thumbnail">
+								<img src="img/comming-soon.png" alt="Comming Soon">
+							</div>
+							<div class="projects__description">
+								<em>Chat Group</em>
+							</div>
+						</article>
+						<article class="projects__project">
+							<div class="projects__thumbnail">
+								<img src="img/comming-soon.png" alt="Comming Soon">
+							</div>
+							<div class="projects__description">
+								<em>Trello Clone</em>
+							</div>
+						</article>
+					</div>
 				</div>
 			</section>
 			<section id="contact-me" class="contact-me full-page-container">
