--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,height=device-height initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,height=device-height initial-scale=1.0">
+	<link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
  	<link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet">
