--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="page-wrapper">
 		<header id="home" class="header full-page-container">
 				<nav class="menu">
-					<div class="menu__icon"><a href="#" onclick="toggle()" ><i id="menu-icon" class="fas fa-bars"></i></a></div>
+					<div class="menu__icon" onclick="toggle()"><i id="menu-icon" class="fas fa-bars"></i></div>
 					<div id="menu-items" class="menu__items hide">
 						<ul>
 							<li><a class="menu__item" href="#home">SOBRE MI</a></li>
