fix menu toggle

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <div class="menu__icon" onclick="toggle()"><i id="menu-icon" class="fas fa-bars"></i></div>
           <div id="menu-items" class="menu__items hide">
             <ul>
-              <li><a class="menu__item" href="#home">SOBRE MI</a></li>
-              <li><a class="menu__item" href="#work-experience">EXPERIENCIA LABORAL</a></li>
-              <li><a class="menu__item" href="#projects">PROYECTOS</a></li>
-              <li><a class="menu__item" href="#contact-me">CONTACTAME</a></li>
+              <li><a class="menu__item" onclick="closeMenu()" href="#home">SOBRE MI</a></li>
+              <li><a class="menu__item" onclick="closeMenu()" href="#work-experience">EXPERIENCIA LABORAL</a></li>
+              <li><a class="menu__item" onclick="closeMenu()" href="#projects">PROYECTOS</a></li>
+              <li><a class="menu__item" onclick="closeMenu()" href="#contact-me">CONTACTAME</a></li>
             </ul>
           </div>
         </nav>
