--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <body>
   <div class="page-wrapper full-page-container">
     <header id="home" class="header full-page-container">
-        <nav class="menu">
+        <nav id="menu" class="menu">
           <div class="menu__icon" onclick="toggle()"><i id="menu-icon" class="fas fa-bars"></i></div>
           <div id="menu-items" class="menu__items hide">
             <ul>
-              <li><a class="menu__item" onclick="closeMenu()" href="#home">SOBRE MI</a></li>
-              <li><a class="menu__item" onclick="closeMenu()" href="#work-experience">EXPERIENCIA LABORAL</a></li>
-              <li><a class="menu__item" onclick="closeMenu()" href="#projects">PROYECTOS</a></li>
-              <li><a class="menu__item" onclick="closeMenu()" href="#contact-me">CONTACTAME</a></li>
+              <li><a id="home-link" class="menu__item" onclick="closeMenu()" href="#home">SOBRE MI</a></li>
+              <li><a id="work-experience-link" class="menu__item" onclick="closeMenu()" href="#work-experience">EXPERIENCIA LABORAL</a></li>
+              <li><a id="projects-link" class="menu__item" onclick="closeMenu()" href="#projects">PROYECTOS</a></li>
+              <li><a id="contact-me-link" class="menu__item" onclick="closeMenu()" href="#contact-me">CONTACTAME</a></li>
             </ul>
           </div>
         </nav>
-        <section class="about-me">
+        <section id="about-me" class="about-me">
           <div class="content-wrapper">
             <div class="about-me__title">
               <h1>Manfred Camacho</h1>
@@ -209,7 +209,7 @@
           </div>
           <div class="contact-me__form-map-wrapper">
             <div class="contact-me__map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.016887893241!2d-58.38376444868833!3d-34.60373446491109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses!2sar!4v1601261977902!5m2!1ses!2sar" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d210198.81507480136!2d-58.432839521384395!3d-34.59514608013432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1601775320166!5m2!1ses!2sar" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>            
             </div>
             <form class="contact-me__form" method="POST" action="https://proyect-personal-portfolio-back.000webhostapp.com/sendForm.php">
               <label for="name">Nombre *</label>
